--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                 </div>
                 <div
                   id="calendario"
-                  class="et_pb_section et_pb_section_1 et_hover_enabled et_section_regular"
+                  class="et_pb_section et_pb_section_1 et_hover_enabled et_section_regular a"
                 >
                   <div id="proximos" class="et_pb_row et_pb_row_7">
                     <div
