--- a/index.html
+++ b/index.html
@@ -1027,12 +1027,12 @@
                   <div class="imagenes fadeLeft">
                     <img
                       loading="lazy"
-                      src="./galeria/images/DSC_0063-(2).jpg"
+                      src="./galeria/images/encuentro-seven-3.jpeg"
                       alt="seven"
                     />
                     <img
                       loading="lazy"
-                      src="./galeria/images/IMG_4048_resize.jpg"
+                      src="./galeria/images/encuentro-seven-15.jpeg"
                       alt="seven"
                     />
                   </div>
@@ -1079,7 +1079,7 @@
                       <h1>PREMIUM CUP MAMIS HOCKEY</h1>
          
                       <p class="description">
-                        Para mas informacion contactanos por correo o Whatsapp.
+                        Para mas informacion contactanos por correo o Whatsapp. <br>
                         Te esperamos para vivir juntos esta fiesta del hockey.
                         <br />
                         <i>Declarado de interés deportivo por EMDER</i>
