--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
     .video-intro-container {
       background-color: #cccccc;
-      height: 100vh;
+      height: 67vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -410,8 +410,8 @@
     }
 
     .video-intro-container video {
-      width: 100%;
-      height: 100%;
+      width: 60%;
+      height: auto;
       object-fit: cover;
     }
 
@@ -425,6 +425,27 @@
       padding-right: 20vw;
       background: rgb(255, 255, 255);
       background: linear-gradient(90deg, rgba(255, 255, 255, 1) 64%, rgba(12, 113, 195, 1) 100%);
+    }
+
+    /* add query for setting the videos to take full width  */
+
+    @media only screen and (max-width: 600px) {
+      .video-intro-container {
+        height: 100vh;
+      }
+
+      .video-intro-container video {
+        width: 100%;
+      }
+
+      .video-1,
+      .video-2 {
+        padding: 0;
+      }
+
+      .video-intro-container {
+        height: 60vh !important;
+      }
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -540,12 +561,12 @@
               </div>
               <div class="video-intro-container video-1">
 
-                <video src="./galeria/bristol.mp4" autoplay loop muted></video>
+                <video src="./galeria/bristol.mp4" autoplay loop muted controls></video>
 
               </div>
               <div class="video-intro-container video-2">
 
-                <video src="./galeria/premium.mp4" autoplay loop muted></video>
+                <video src="./galeria/premium.mp4" autoplay loop muted controls></video>
 
               </div>
               <div id="calendario" class="et_pb_section et_pb_section_1 et_hover_enabled et_section_regular a">
