remove column, change dates

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                   </div>
                 </div>
                 <div id="eventos" class="et_pb_row et_pb_row_8 et_pb_gutters1">
-                  <div class="et_pb_column et_pb_column_1_4 et_pb_column_11 et_pb_css_mix_blend_mode_passthrough">
+                  <!-- <div class="et_pb_column et_pb_column_1_4 et_pb_column_11 et_pb_css_mix_blend_mode_passthrough">
                     <div
                       class="et_pb_module et_pb_text et_pb_text_9 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
                       <div class="et_pb_text_inner">
@@ -613,9 +613,9 @@
                             class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
                       </li>
                     </ul>
-                    <!-- .et_pb_counters -->
-                  </div>
-                  <div class="et_pb_column et_pb_column_1_4 et_pb_column_12 et_pb_css_mix_blend_mode_passthrough">
+                  </div> -->
+                  <!-- et_pb_column et_pb_column_1_3 para 3 cols et_pb_column et_pb_column_1_4 para 4 cols -->
+                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_12 et_pb_css_mix_blend_mode_passthrough">
                     <div
                       class="et_pb_module et_pb_text et_pb_text_10 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
                       <div class="et_pb_text_inner">
@@ -635,7 +635,7 @@
                     </div>
                     <ul
                       class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_2 clearfix et_pb_bg_layout_light et_pb_text_align_center">
-                      <li
+                      <!-- <li
                         class="et_pb_social_media_follow_network_4 et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_4">
                         <a href="https://es-es.facebook.com/seven.semanadelmar" class="icon et_pb_with_border"
                           title="Follow on Facebook" target="_blank"><span
@@ -646,18 +646,18 @@
                         <a href="https://www.instagram.com/sevensemanadelmar/" class="icon et_pb_with_border"
                           title="Follow on Instagram" target="_blank"><span
                             class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li>
+                      </li> -->
                     </ul>
                     <!-- .et_pb_counters -->
                   </div>
-                  <div class="et_pb_column et_pb_column_1_4 et_pb_column_13 et_pb_css_mix_blend_mode_passthrough">
+                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_13 et_pb_css_mix_blend_mode_passthrough">
                     <div
                       class="et_pb_module et_pb_text et_pb_text_11 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
                       <div class="et_pb_text_inner">
                         <h3>Mar del Cup &#8211; Futbol Femenino</h3>
                         <p>
-                          Jueves <strong>7</strong>  y Viernes
-                          <strong>8</strong> de Diciembre
+                          Viernes <strong>8</strong>  y Sábado
+                          <strong>9</strong> de Diciembre
                           <br />
                         </p>
                         <p class="wideParagraph" style="padding-top: 3rem">
@@ -669,7 +669,7 @@
                     </div>
                     <ul
                       class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_3 clearfix et_pb_bg_layout_light et_pb_text_align_center">
-                      <li
+                      <!-- <li
                         class="et_pb_social_media_follow_network_6 et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_6">
                         <a href="https://www.facebook.com/MardelCup-F%C3%BAtbol-Femenino-105884984148867/"
                           class="icon et_pb_with_border" title="Follow on Facebook" target="_blank"><span
@@ -680,11 +680,11 @@
                         <a href="https://www.instagram.com/mardelcupfutbolfemenino/?hl=es-la"
                           class="icon et_pb_with_border" title="Follow on Instagram" target="_blank"><span
                             class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li>
+                      </li> -->
                     </ul>
                     <!-- .et_pb_counters -->
                   </div>
-                  <div class="et_pb_column et_pb_column_1_4 et_pb_column_14 et_pb_css_mix_blend_mode_passthrough">
+                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_14 et_pb_css_mix_blend_mode_passthrough">
                     <div
                       class="et_pb_module et_pb_text et_pb_text_12 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
                       <div class="et_pb_text_inner">
@@ -704,7 +704,7 @@
                     </div>
                     <ul
                       class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_4 clearfix et_pb_bg_layout_light et_pb_text_align_center">
-                      <li
+                      <!-- <li
                         class="et_pb_social_media_follow_network_8 et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_8">
                         <a href="https://www.facebook.com/pg/premiumcupmamisylibresmdp/about/"
                           class="icon et_pb_with_border" title="Follow on Facebook" target="_blank"><span
@@ -715,7 +715,7 @@
                         <a href="https://www.instagram.com/premiumcupmamisylibresmdp/?hl=es-la"
                           class="icon et_pb_with_border" title="Follow on Instagram" target="_blank"><span
                             class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li>
+                      </li> -->
                     </ul>
                     <!-- .et_pb_counters -->
                   </div>
@@ -818,7 +818,7 @@
                     <p class="description">
                       El evento de hockey femenino mas convocante de nuestra
                       ciudad. Participan mas de 35 clubes de todo el pais.
-                      Congrega a mas de 1200 jugadoras. Disfrutá de tu deporte
+                      Congrega a mas de 1800 jugadoras. Disfrutá de tu deporte
                       favorito junto a un equipo de profesionales que te
                       acompañarán en cada momento. Recreación con nuestro
                       equipo Che Chiqui! Con quienes unimos fuerzas hace ya 11
