cambiar fecha mamis

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       nonce: "664f4c1a83",
       home_url: "https://dseventosdeportivos.com.ar",
     };
-      /* ]]\> */
+    /* ]]\> */
   </script>
   <script type="text/javascript" src="js/jquery.js"></script>
   <!-- <script type='text/javascript' src='js/jquery-migrate.min.js'></script> -->
@@ -692,8 +692,8 @@
                           Premium Cup &#8211; MAMIS HOCKEY
                         </h3>
                         <p>
-                          Jueves <strong>7</strong>  y Viernes
-                          <strong>8</strong> de Diciembre
+                          viernes <strong>8</strong>  y Sábado
+                          <strong>9</strong> de Diciembre
                           <br />
                         </p>
                         <p style="padding-top: 2rem">
@@ -1515,7 +1515,7 @@
       tinymce_uri: "",
     };
     var et_pb_box_shadow_elements = [];
-      /* ]]> */
+    /* ]]> */
   </script>
   <script type="text/javascript" src="js/custom.min.js"></script>
   <script>
