change mami fecha

--- a/index.html
+++ b/index.html
@@ -692,8 +692,8 @@
                           Premium Cup &#8211; MAMIS HOCKEY
                         </h3>
                         <p>
-                          viernes <strong>8</strong>  y Sábado
-                          <strong>9</strong> de Diciembre
+                          viernes <strong>29</strong>  y Sábado
+                          <strong>30</strong> de Noviembre
                           <br />
                         </p>
                         <p style="padding-top: 2rem">
