--- a/index.html
+++ b/index.html
@@ -447,6 +447,10 @@
         height: 60vh !important;
       }
     }
+
+    .center-text {
+      text-align: center;
+    }
   </style>
 
 </head>
@@ -574,7 +578,7 @@
                     class="et_pb_column et_pb_column_4_4 et_pb_column_10 et_pb_css_mix_blend_mode_passthrough et-last-child">
                     <div class="et_pb_module et_pb_text et_pb_text_8 et_pb_bg_layout_light et_pb_text_align_right">
                       <div class="et_pb_text_inner">
-                        <h2 style="text-align: center">Calendario 2023</h2>
+                        <h2 style="text-align: center">Calendario 2024</h2>
                         <p>&nbsp;</p>
                       </div>
                     </div>
@@ -618,17 +622,17 @@
                   <div class="et_pb_column et_pb_column_1_3 et_pb_column_12 et_pb_css_mix_blend_mode_passthrough">
                     <div
                       class="et_pb_module et_pb_text et_pb_text_10 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
-                      <div class="et_pb_text_inner">
+                      <div class="et_pb_text_inner center-text">
                         <h3>Seven Hockey Copa Bristol Mar del Plata </h3>
                         <p>
                           Sub 8 a Sub 18 <br />
                           <br />
-                          Sábado <strong>2</strong>  y Domingo
-                          <strong>3</strong> de Diciembre<br />
+                          Sábado <strong>30</strong> de Noviembre  y <br> Domingo
+                          <strong>1</strong> de Diciembre<br />
                         </p>
                         <p>
                           <img loading="lazy" style="width: 400px" class="alignnone size-medium wp-image-283"
-                            src="images/seven-blanco.png" alt="" width="320" height="168"
+                            src="images/copabristol-logo.png" alt="" width="320" height="168"
                             sizes="(max-width: 360px) 100vw, 360px" />
                         </p>
                       </div>
@@ -653,16 +657,17 @@
                   <div class="et_pb_column et_pb_column_1_3 et_pb_column_13 et_pb_css_mix_blend_mode_passthrough">
                     <div
                       class="et_pb_module et_pb_text et_pb_text_11 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
-                      <div class="et_pb_text_inner">
+                      <div class="et_pb_text_inner center-text">
                         <h3>Mar del Cup &#8211; Futbol Femenino</h3>
                         <p>
-                          Viernes <strong>8</strong>  y Sábado
-                          <strong>9</strong> de Diciembre
+                          <br />
+                          Viernes <strong>29</strong>  y Sábado
+                          <strong>30</strong> de Noviembre
                           <br />
                         </p>
                         <p class="wideParagraph" style="padding-top: 3rem">
-                          <img loading="lazy" style="width: 400px" class="alignnone size-medium wp-image-283"
-                            src="images/camp3.png" alt="" width="360" height="168"
+                          <img loading="lazy" style="width: 470px" class="alignnone size-medium wp-image-283"
+                            src="images/mardelcup-logo.png" alt="" width="360" height="168"
                             sizes="(max-width: 360px) 100vw, 360px" />
                         </p>
                       </div>
@@ -687,18 +692,20 @@
                   <div class="et_pb_column et_pb_column_1_3 et_pb_column_14 et_pb_css_mix_blend_mode_passthrough">
                     <div
                       class="et_pb_module et_pb_text et_pb_text_12 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
-                      <div class="et_pb_text_inner">
+                      <div class="et_pb_text_inner center-text">
                         <h3 style="width: 103%">
                           Premium Cup &#8211; MAMIS HOCKEY
                         </h3>
                         <p>
+                           <br />
                           viernes <strong>29</strong>  y Sábado
                           <strong>30</strong> de Noviembre
                           <br />
                         </p>
-                        <p style="padding-top: 2rem">
-                          <img loading="lazy" class="alignnone size-medium wp-image-281" src="images/premiumcup.png"
-                            alt="" width="300" height="178" sizes="(max-width: 300px) 100vw, 300px" />
+                        <p style="padding-top: 3.2rem">
+                          <img loading="lazy" class="alignnone size-medium wp-image-281"
+                            src="images/premiumcup-logo.png" alt="" width="300" height="178"
+                            sizes="(max-width: 300px) 100vw, 300px" />
                         </p>
                       </div>
                     </div>
@@ -3061,7 +3068,7 @@
     }
 
     #eventos div {
-      height: 527px;
+      height: 557px;
     }
   </style>
 </body>
