Update event dates in index.html

--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
                         </h3>
                         <p>
                            <br />
-                          viernes <strong>29</strong>  y Sábado
-                          <strong>30</strong> de Noviembre
+                          viernes <strong>6</strong>  y Sábado
+                          <strong>7</strong> de Diciembre
                           <br />
                         </p>
                         <p style="padding-top: 3.2rem">
