Update event dates in index.html

--- a/index.html
+++ b/index.html
@@ -661,8 +661,8 @@
                         <h3>Mar del Cup &#8211; Futbol Femenino</h3>
                         <p>
                           <br />
-                          Viernes <strong>29</strong>  y Sábado
-                          <strong>30</strong> de Noviembre
+                          viernes <strong>6</strong>  y Sábado
+                          <strong>7</strong> de Diciembre
                           <br />
                         </p>
                         <p class="wideParagraph" style="padding-top: 3rem">
