Update event dates in index.html

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       text-align: center;
     }
   </style>
-
+  <link rel="stylesheet" href="/css/counter.css">
 </head>
 
 <body
@@ -619,9 +619,9 @@
                     </ul>
                   </div> -->
                   <!-- et_pb_column et_pb_column_1_3 para 3 cols et_pb_column et_pb_column_1_4 para 4 cols -->
-                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_12 et_pb_css_mix_blend_mode_passthrough">
+                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_12 et_pb_css_mix_blend_mode_passthrough ">
                     <div
-                      class="et_pb_module et_pb_text et_pb_text_10 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
+                      class="et_pb_module et_pb_text et_pb_text_10 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left evento">
                       <div class="et_pb_text_inner center-text">
                         <h3>Seven Hockey Copa Bristol Mar del Plata </h3>
                         <p>
@@ -630,6 +630,19 @@
                           Sábado <strong>30</strong> de Noviembre  y <br> Domingo
                           <strong>1</strong> de Diciembre<br />
                         </p>
+
+                        <div class="counter">
+                          <div id="countdown1">
+                            <ul>
+                              <li><span id="days1"></span>dias</li>
+                              <li><span id="hours1"></span>horas</li>
+                              <li><span id="minutes1"></span>minutos</li>
+                              <li><span id="seconds1"></span>segundos</li>
+                            </ul>
+                          </div>
+                        </div>
+
+
                         <p>
                           <img loading="lazy" style="width: 400px" class="alignnone size-medium wp-image-283"
                             src="images/copabristol-logo.png" alt="" width="320" height="168"
@@ -637,93 +650,72 @@
                         </p>
                       </div>
                     </div>
-                    <ul
-                      class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_2 clearfix et_pb_bg_layout_light et_pb_text_align_center">
-                      <!-- <li
-                        class="et_pb_social_media_follow_network_4 et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_4">
-                        <a href="https://es-es.facebook.com/seven.semanadelmar" class="icon et_pb_with_border"
-                          title="Follow on Facebook" target="_blank"><span
-                            class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li>
-                      <li
-                        class="et_pb_social_media_follow_network_5 et_pb_social_icon et_pb_social_network_link et-social-instagram et_pb_social_media_follow_network_5">
-                        <a href="https://www.instagram.com/sevensemanadelmar/" class="icon et_pb_with_border"
-                          title="Follow on Instagram" target="_blank"><span
-                            class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li> -->
-                    </ul>
+                    
                     <!-- .et_pb_counters -->
                   </div>
-                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_13 et_pb_css_mix_blend_mode_passthrough">
+                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_13 et_pb_css_mix_blend_mode_passthrough ">
                     <div
-                      class="et_pb_module et_pb_text et_pb_text_11 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
+                      class="et_pb_module et_pb_text et_pb_text_11 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left evento">
                       <div class="et_pb_text_inner center-text">
-                        <h3>Mar del Cup &#8211; Futbol Femenino</h3>
+                        <h3>Mar del Cup <br> Futbol Femenino</h3>
                         <p>
                           <br />
-                          viernes <strong>6</strong>  y Sábado
+                          Viernes <strong>6</strong>  y Sábado
                           <strong>7</strong> de Diciembre
                           <br />
                         </p>
-                        <p class="wideParagraph" style="padding-top: 3rem">
+                        <div class="counter">
+                          <div id="countdown2">
+                            <ul>
+                              <li><span id="days2"></span>dias</li>
+                              <li><span id="hours2"></span>horas</li>
+                              <li><span id="minutes2"></span>minutos</li>
+                              <li><span id="seconds2"></span>segundos</li>
+                            </ul>
+                          </div>
+                        </div>
+                        <p class="wideParagraph" style="padding-top: .3rem">
                           <img loading="lazy" style="width: 470px" class="alignnone size-medium wp-image-283"
                             src="images/mardelcup-logo.png" alt="" width="360" height="168"
                             sizes="(max-width: 360px) 100vw, 360px" />
                         </p>
                       </div>
                     </div>
-                    <ul
-                      class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_3 clearfix et_pb_bg_layout_light et_pb_text_align_center">
-                      <!-- <li
-                        class="et_pb_social_media_follow_network_6 et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_6">
-                        <a href="https://www.facebook.com/MardelCup-F%C3%BAtbol-Femenino-105884984148867/"
-                          class="icon et_pb_with_border" title="Follow on Facebook" target="_blank"><span
-                            class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li>
-                      <li
-                        class="et_pb_social_media_follow_network_7 et_pb_social_icon et_pb_social_network_link et-social-instagram et_pb_social_media_follow_network_7">
-                        <a href="https://www.instagram.com/mardelcupfutbolfemenino/?hl=es-la"
-                          class="icon et_pb_with_border" title="Follow on Instagram" target="_blank"><span
-                            class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li> -->
-                    </ul>
+                          
                     <!-- .et_pb_counters -->
                   </div>
-                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_14 et_pb_css_mix_blend_mode_passthrough">
+                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_14 et_pb_css_mix_blend_mode_passthrough ">
                     <div
-                      class="et_pb_module et_pb_text et_pb_text_12 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left">
+                      class="et_pb_module et_pb_text et_pb_text_12 et_animated et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_left evento">
                       <div class="et_pb_text_inner center-text">
                         <h3 style="width: 103%">
-                          Premium Cup &#8211; MAMIS HOCKEY
+                          Premium Cup <br> MAMIS HOCKEY
                         </h3>
                         <p>
-                           <br />
-                          viernes <strong>6</strong>  y Sábado
+                          <br />
+                          Viernes <strong>6</strong>  y Sábado
                           <strong>7</strong> de Diciembre
                           <br />
                         </p>
-                        <p style="padding-top: 3.2rem">
+
+                        <div class="counter">
+                          <div id="countdown2">
+                            <ul>
+                              <li><span id="days3"></span>dias</li>
+                              <li><span id="hours3"></span>horas</li>
+                              <li><span id="minutes3"></span>minutos</li>
+                              <li><span id="seconds3"></span>segundos</li>
+                            </ul>
+                          </div>
+                        </div>
+                        <p style="padding-top: 1.12rem">
                           <img loading="lazy" class="alignnone size-medium wp-image-281"
                             src="images/premiumcup-logo.png" alt="" width="300" height="178"
                             sizes="(max-width: 300px) 100vw, 300px" />
                         </p>
                       </div>
                     </div>
-                    <ul
-                      class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_4 clearfix et_pb_bg_layout_light et_pb_text_align_center">
-                      <!-- <li
-                        class="et_pb_social_media_follow_network_8 et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_8">
-                        <a href="https://www.facebook.com/pg/premiumcupmamisylibresmdp/about/"
-                          class="icon et_pb_with_border" title="Follow on Facebook" target="_blank"><span
-                            class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li>
-                      <li
-                        class="et_pb_social_media_follow_network_9 et_pb_social_icon et_pb_social_network_link et-social-instagram et_pb_social_media_follow_network_9">
-                        <a href="https://www.instagram.com/premiumcupmamisylibresmdp/?hl=es-la"
-                          class="icon et_pb_with_border" title="Follow on Instagram" target="_blank"><span
-                            class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a>
-                      </li> -->
-                    </ul>
+
                     <!-- .et_pb_counters -->
                   </div>
                 </div>
@@ -1570,6 +1562,7 @@
         (e.style.opacity = 0), io(e, "scaleUpC");
       });
   </script>
+  <script src="./js/counter.js"></script>
   <style>
     .feature {
       /* display: flex; */
@@ -3067,8 +3060,17 @@
       margin: auto !important;
     }
 
-    #eventos div {
-      height: 557px;
+    #eventos>div {
+      height: 657px;
+    }
+
+    .evento {
+      padding-left: 5px !important;
+      padding-right: 5px !important;
+      height: 700px;
+    }
+    #countdown2 {
+      padding-top: 3.4rem;
     }
   </style>
 </body>
