--- a/index.html
+++ b/index.html
@@ -516,14 +516,14 @@
                       </div>
                     </div>
                   </div>
-                  <div class="et_pb_column et_pb_column_1_3 et_pb_column_4 et_pb_css_mix_blend_mode_passthrough">
+                  <!-- <div class="et_pb_column et_pb_column_1_3 et_pb_column_4 et_pb_css_mix_blend_mode_passthrough">
                     <div
                       class="et_pb_module et_pb_text et_pb_text_3 et_hover_enabled et_pb_bg_layout_dark et_pb_text_align_center">
                       <div class="et_pb_text_inner">
                         <h3>info@dseventosdeportivos.com.ar</h3>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="et_pb_column et_pb_column_1_3 et_pb_column_5 et_pb_css_mix_blend_mode_passthrough">
                     <ul
                       class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_0 clearfix et_pb_bg_layout_dark has_follow_button">
@@ -535,7 +535,7 @@
                           href="https://www.facebook.com/pg/dseventosdeportivos/about/?ref=page_internal"
                           class="follow_button" title="Facebook" target="_blank">Seguir</a>
                       </li>
-                      <li
+                      <!-- <li
                         class="et_pb_social_media_follow_network_1 et_pb_social_icon et_pb_social_network_link et-social-instagram et_pb_social_media_follow_network_1">
                         <a href="https://www.instagram.com/dseventosdeportivos/" class="icon et_pb_with_border"
                           title="Follow on Instagram" target="_blank"><span
@@ -543,7 +543,7 @@
                           href="https://www.instagram.com/dseventosdeportivos/" class="follow_button" title="Instagram"
                           target="_blank">Seguir
                         </a>
-                      </li>
+                      </li> -->
                     </ul>
                     <!-- .et_pb_counters -->
                   </div>
@@ -627,8 +627,8 @@
                         <p>
                           Sub 8 a Sub 18 <br />
                           <br />
-                          Sábado <strong>30</strong> de Noviembre  y <br> Domingo
-                          <strong>1</strong> de Diciembre<br />
+                          Sábado <strong>29</strong> y
+                          <strong>30</strong> de Noviembre<br />
                         </p>
 
                         <div class="counter">
@@ -650,7 +650,7 @@
                         </p>
                       </div>
                     </div>
-                    
+
                     <!-- .et_pb_counters -->
                   </div>
                   <div class="et_pb_column et_pb_column_1_3 et_pb_column_13 et_pb_css_mix_blend_mode_passthrough ">
@@ -660,8 +660,8 @@
                         <h3>Mar del Cup <br> Futbol Femenino</h3>
                         <p>
                           <br />
-                          Viernes <strong>6</strong>  y Sábado
-                          <strong>7</strong> de Diciembre
+                          Viernes <strong>5</strong>  y Sábado
+                          <strong>6</strong> de Diciembre
                           <br />
                         </p>
                         <div class="counter">
@@ -681,7 +681,7 @@
                         </p>
                       </div>
                     </div>
-                          
+
                     <!-- .et_pb_counters -->
                   </div>
                   <div class="et_pb_column et_pb_column_1_3 et_pb_column_14 et_pb_css_mix_blend_mode_passthrough ">
@@ -693,8 +693,8 @@
                         </h3>
                         <p>
                           <br />
-                          Viernes <strong>6</strong>  y Sábado
-                          <strong>7</strong> de Diciembre
+                          Viernes <strong>5</strong>  y Sábado
+                          <strong>6</strong> de Diciembre
                           <br />
                         </p>
 
@@ -791,7 +791,7 @@
                           la gestión, desarrollo y organización de eventos
                           deportivos vinculados a la actividad deportiva,
                           escolar, amateur, y de alto rendimiento. Desde hace
-                          26 años DS Eventos Deportivos consolida su liderazgo
+                          28 años DS Eventos Deportivos consolida su liderazgo
                           en el mercado local y un crecimiento sostenido en el
                           mercado internacional.
                         </p>
@@ -820,10 +820,10 @@
                       Congrega a mas de 1800 jugadoras. Disfrutá de tu deporte
                       favorito junto a un equipo de profesionales que te
                       acompañarán en cada momento. Recreación con nuestro
-                      equipo Che Chiqui! Con quienes unimos fuerzas hace ya 11
+                      equipo de profes! Con quienes unimos fuerzas hace ya 11
                       años. Musica, carpa de maquillaje artistico, fiesta de
                       cierre y muchas sorpresas mas!!! No te quedes afuera.
-                      Sumate ya! Para mas informacion contactanos por correo o
+                      Sumate ya! Para mas informacion contactanos por
                       Whatsapp.
 
                       <br />
@@ -868,7 +868,7 @@
                     <h1>PREMIUM CUP MAMIS HOCKEY</h1>
 
                     <p class="description">
-                      Para mas informacion contactanos por correo o Whatsapp. <br>
+                      Para mas informacion contactanos por Whatsapp. <br>
                       Te esperamos para vivir juntos esta fiesta del hockey.
                       <br />
                       <i>Declarado de interés deportivo por EMDER</i>
@@ -3069,6 +3069,7 @@
       padding-right: 5px !important;
       height: 700px;
     }
+
     #countdown2 {
       padding-top: 3.4rem;
     }
