Update event details in index.html

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                         <p>
                           Sub 8 a Sub 18 <br />
                           <br />
-                          Sábado <strong>29</strong> y
+                          Sábado <strong>29</strong> y Domingo
                           <strong>30</strong> de Noviembre<br />
                         </p>
 
@@ -852,8 +852,7 @@
                       Desde DS, buscamos hacer un torneo donde puedas
                       disfrutar de un fin de semana intenso en lo deportivo y
                       en lo recreativo. Veni a participar de una experiencia
-                      realmente distinta. Para mas informacion contactanos por
-                      correo o Whatsapp.
+                      realmente distinta. Para mas informacion contactanos por Whatsapp.
                       <br />
                       <i>Declarado de interés deportivo por EMDER</i>
                     </p>
