--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                       <div class="et_pb_text_inner">
                         <h3 style="text-align: center">
                           28 años al servicio del Deporte Amateur y de Alto
-                          Rendimiento
+                          Rendimiento.
                         </h3>
                       </div>
                     </div>
