--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     <div class="et_pb_module et_pb_text et_pb_text_4 et_pb_bg_layout_light et_pb_text_align_left">
                       <div class="et_pb_text_inner">
                         <h3 style="text-align: center">
-                          28 años al servicio del Deporte Amateur y de Alto Rendimiento.....
+                          28 años al servicio del Deporte Amateur y de Alto Rendimiento.5
                         </h3>
                       </div>
                     </div>
