Agrego seccion e imagenes

--- a/prueba-imagenes.html
+++ b/prueba-imagenes.html
@@ -909,9 +909,19 @@
                     <div class="et_pb_module et_pb_text et_pb_text_6 et_pb_bg_layout_light et_pb_text_align_left">
                       <div class="et_pb_text_inner">
                         <ul>
-                          <li>Organización de Eventos Deportivos.</li>
+                          <li>
+                            <a href="https://drive.google.com/file/d/1x7JZOoMVAeQB5A6vsEERs0kTTs8ebF9_/view?usp=sharing" 
+                                target="_blank" rel="noopener noreferrer">
+                                Reglamento del Torneo
+                            </a>
+                          </li>
                           <p></p>
-                          <li>Servicios para Pretemporadas.</li>
+                          <li>
+                            <a href="https://docs.google.com/document/d/1FQja9e15p1JQ4qh_UN8JSK-4NuiDZs52/edit?usp=sharing&ouid=111436059126753349959&rtpof=true&sd=true" 
+                                target="_blank" rel="noopener noreferrer">
+                                Programa de actividades
+                            </a>
+                          </li>
                         </ul>
                       </div>
                     </div>
