Agrego seccion e imagenes

--- a/prueba-imagenes.html
+++ b/prueba-imagenes.html
@@ -910,7 +910,7 @@
                       <div class="et_pb_text_inner">
                         <ul>
                           <li>
-                            <a href="https://drive.google.com/file/d/1x7JZOoMVAeQB5A6vsEERs0kTTs8ebF9_/view?usp=sharing" 
+                            <a href="docs/reglamento.pdf" 
                                 target="_blank" rel="noopener noreferrer">
                                 Reglamento del Torneo
                             </a>
