Agrego seccion e imagenes

--- a/prueba-imagenes.html
+++ b/prueba-imagenes.html
@@ -471,9 +471,9 @@
                 <div class="et_pb_row et_pb_row_1">
                   <div
                     class="et_pb_column et_pb_column_4_4 et_pb_column_1 et_pb_css_mix_blend_mode_passthrough et-last-child">
-                    <div class="et_pb_module et_pb_divider et_pb_divider_0 et_pb_divider_position_ et_pb_space">
+                  <!--   <div class="et_pb_module et_pb_divider et_pb_divider_0 et_pb_divider_position_ et_pb_space">
                       <div class="et_pb_divider_internal"></div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
                 <div class="et_pb_row et_pb_row_2">
@@ -917,7 +917,7 @@
                           </li>
                           <p></p>
                           <li>
-                            <a href="https://docs.google.com/document/d/1FQja9e15p1JQ4qh_UN8JSK-4NuiDZs52/edit?usp=sharing&ouid=111436059126753349959&rtpof=true&sd=true" 
+                            <a href="docs/programa.pdf" 
                                 target="_blank" rel="noopener noreferrer">
                                 Programa de actividades
                             </a>
@@ -933,9 +933,17 @@
                     <div class="et_pb_module et_pb_text et_pb_text_7 et_pb_bg_layout_light et_pb_text_align_left">
                       <div class="et_pb_text_inner">
                         <ul>
-                          <li>Giras deportivas.</li>
+                           <li>
+                            <a href="" 
+                                target="_blank" rel="noopener noreferrer">
+                                XXXX
+                            </a>
+                          </li>
                           <p></p>
-                          <li>Servicios Receptivos.</li>
+                           
+                          </li>
+                          </li>
+                         
                         </ul>
                       </div>
                       </div>
